# beat-rider

./: .gitattributes  .gitignore  .gitmodules  .ycm_extra_conf.py  LICENSE  README.md  bootstrap  easter.android.config  easter.config  run  upload-apk
.github/workflows/: build.yml
assets/: spaceship.dae.lua
assets/atlases/: game.lua
assets/meshes/: cube.dae  cube.dae.lua  spaceship.dae  spaceship.dae.lua
assets/presets/: Note.xml  Spark.xml
assets/presets/glider/: Camera.xml  Camera2D.xml  Mesh.xml  Sprite.xml  Text.xml
assets/raw/: game.tps
assets/scenes/: analyze.xml  ride.xml  visualize.xml
assets/shaders/: graph.fsh  graph.lua  graph.vsh  note.fsh  note.lua  note.vsh  track.fsh  track.lua  track.vsh
assets/sprites/: gem.lua  spark.lua
hosts/android/: init.lua
hosts/android/project/: .classpath  AndroidManifest.xml
hosts/android/project/src/com/rubycell/beatrider/: MoaiActivity.java  MoaiView.java
hosts/android/project/src/com/ziplinegames/moai/: LinearLayoutIMETrap.java  Moai.java  MoaiCamera.java  MoaiKeyboard.java  MoaiLocalNotificationReceiver.java  MoaiLog.java  MoaiMoviePlayer.java
plugins/moai-aubio/: CMakeLists.txt  plugin.CMake
plugins/moai-aubio/aubio/: CMakeLists.txt  config.h.in
plugins/moai-aubio/fluendo/: CMakeLists.txt  config.h.in
plugins/moai-aubio/fluendo/src/: bitstream.c  bitstream.h  common.c  common.h  gst-stub.c  gst-stub.h  mp3-c-synth.c  mp3-c.c  mp3tl-priv.h  mp3tl.c  table-dewindow.h
plugins/moai-aubio/moai-aubio/: Aubio.cpp  Aubio.hpp  AubioUtils.hpp  BufferSink.cpp  BufferSink.hpp  CMakeLists.txt  CenteredMovingAvg.cpp  CenteredMovingAvg.hpp  ChunkProcessor.hpp  ChunkProcessor.inl  Decoder.hpp  Difference.cpp  Difference.hpp  DoubleExp.cpp  DoubleExp.hpp  MOAIUntzSoundPlus.cpp  MOAIUntzSoundPlus.hpp  MP3Codec.cpp  MP3Codec.hpp  Mp3Decoder.cpp  Mp3Decoder.hpp  OnsetDetector.cpp  OnsetDetector.hpp  PcmSource.cpp  PcmSource.hpp  PhaseVocoder.cpp  PhaseVocoder.hpp  Root.hpp  Root.inl  Sink.hpp  Sink.inl  Source.hpp  Source.inl  SpecDesc.cpp  SpecDesc.hpp  Substream.hpp  TempoDetector.cpp  TempoDetector.hpp  UntzSoundEx.cpp  UntzSoundEx.hpp  (+2 more)
plugins/moai-aubio/mpg123/: CMakeLists.txt  config.h.in
plugins/moai-aubio/mpg123/src/: optimize.c
profiles/: Desktop-720p.lua  GalaxyS2.lua  GalaxyS4.lua  LG-G2.lua  Nexus7-2012.lua  simulator.lua  test.lua
src/: Analysis.lua  AnalyzeController.lua  BeatRider.lua  ColorGrid.lua  ColorTile.lua  DeveloperOptions.lua  ListView.lua  Note.lua  RideCamera.lua  RideController.lua  Ship.lua  Spark.lua  Track.lua  TrackBound.lua  VisualizeControl.lua  main.lua  mesh.lua
src/glider/: Action.lua  Actor.lua  Animation.lua  App.lua  Asset.lua  Audio.lua  Camera.lua  Camera3D.lua  ClientEventListener.lua  CustomDraw.lua  DevConsole.lua  Director.lua  Entity.lua  Event.lua  Input.lua  InputListener.lua  Listener.lua  MessagePack.lua  NetActor.lua  NetBase.lua  NetShadow.lua  Network.lua  Options.lua  PlainRenderable.lua  Preset.lua  ProtoPack.lua  Renderable.lua  RingBuffer.lua  SceneXml.lua  Screen.lua  ServerEventListener.lua  Sprite.lua  Text.lua  Tracked.lua  Transform.lua  Widget.lua  WidgetManager.lua  init.lua
src/glider/Xml/: init.lua  slaxdom.lua  slaxml.lua
src/glider/lang/: assert.lua  class.lua  component.lua  enum.lua  init.lua  math.lua  module.lua  preset.lua  print.lua  scene.lua  strict.lua  string.lua  table.lua
src/glider/loaders/: atlas.lua  audio.lua  font.lua  mesh.lua  preset.lua  rt-texture.lua  scene.lua  shader.lua  sprite.lua  stretchPatch.lua  texture.lua  tileset.lua
src/glider/network/: Client.lua  Protocol.lua  Serialization.lua  Server.lua
src/glider/presets/: Camera.lua  Camera3D.lua  Mesh.lua  Sprite.lua  Text.lua
src/presets/: Marker.lua  Note.lua  Ship.lua
src/scenes/: Analyze.lua  FileBrowser.lua  Ride.lua  Scratch.lua
